--- a/flask/flaskr/templates/base.html
+++ b/flask/flaskr/templates/base.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+	<!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <title>Pubmed Subscription</title>
+</head>
 <style>
   body{ 
     font-size: 15pt;
     font-family: arial;
+    padding: 100px;
   }
 </style>
-<head>
-    <title>PC Game Shop</title>
-</head>
 
 
 <nav>
-  <ul>
-    {% if g.user %}
-      <li><span>Player email: {{ g.user }}</span>
-      <li><a href="{{ url_for('controller.logout') }}">Log Out</a>
-    {% else %}
-      <li><a href="{{ url_for('controller.register') }}">Register</a>
-      <li><a href="{{ url_for('controller.login') }}">Log In</a>
-    {% endif %}
-  </ul>
+<div class="container" id="account">
+{% include "nav.html"%}
+</div>
 </nav>
 <section class="content">
   <header>
