--- a/flask/flaskr/templates/index.html
+++ b/flask/flaskr/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block body %}
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
     <!--
 <script>
     window.onload = function() {
@@ -28,18 +30,26 @@
         {% endfor %}
       </div>
       <li><span>Player tags: {{ g.user }}</span>
-      <li><a href="{{ url_for('controller.logout') }}">Log Out</a>
     {% else %}
-      <li><a href="{{ url_for('controller.register') }}">Register</a>
-      <li><a href="{{ url_for('controller.login') }}">Log In</a>
-    {% endif %}
-    <!--
-    <form method="POST" action="/search">
-      <p>Search <input type="text" name="name"> <input type="submit" value="search"></p>
-    </form>
-    <div id="search">
-        <button type="button"><a href="/0">Return To Home</a></button>
+    <form method="post">
+    <div class="form-group">
+        <label for="exampleFormControlTextarea1">Paste your search details here</label>
+        <textarea class="form-control" id="search_terms" name="search_terms" rows="3"></textarea>
+    <input id="datepicker" name="min_date" width="276" />
+    <script>
+        $('#datepicker').datepicker({
+            uiLibrary: 'bootstrap4'
+        });
+    </script>
     </div>
-    -->
+        <button class="btn btn-primary" type="submit" id="button-addon2">Search</button>
+    </form>
+    <h2> Your search term </h2>
+    <div>{{search_terms}}</div>
+    {% for i in range(url|length)%}
+        <div><a href={{url[i]}}>{{title[i]}}</a></div>
+        <div>{{abstract[i]}}</div>
+    {% endfor %}
+    {% endif %}
 
 {% endblock %}
