add popup login

--- a/flask/flaskr/templates/index.html
+++ b/flask/flaskr/templates/index.html
@@ -21,7 +21,7 @@
         }
     };
 </script>
---->
+-->
     {% if g.user %}
       <div>
         {% for i in range(url|length) %}
@@ -31,11 +31,16 @@
       </div>
       <li><span>Player tags: {{ g.user }}</span>
     {% else %}
+    <script>
+        $("#login_register").click();
+    </script>
+    {% endif %}
+
     <form method="post">
     <div class="form-group">
         <label for="exampleFormControlTextarea1">Paste your search details here</label>
-        <textarea class="form-control" id="search_terms" name="search_terms" rows="3"></textarea>
-    <input id="datepicker" name="min_date" width="276" />
+        <textarea class="form-control" id="search_terms" name="search_terms" rows="3">{{search_terms}}</textarea>
+    <input id="datepicker" name="min_date" width="276" value={{min_date}}>
     <script>
         $('#datepicker').datepicker({
             uiLibrary: 'bootstrap4'
@@ -44,12 +49,8 @@
     </div>
         <button class="btn btn-primary" type="submit" id="button-addon2">Search</button>
     </form>
-    <h2> Your search term </h2>
-    <div>{{search_terms}}</div>
     {% for i in range(url|length)%}
         <div><a href={{url[i]}}>{{title[i]}}</a></div>
         <div>{{abstract[i]}}</div>
     {% endfor %}
-    {% endif %}
-
 {% endblock %}
