--- a/flask/flaskr/templates/subscription.html
+++ b/flask/flaskr/templates/subscription.html
@@ -8,21 +8,40 @@
         <h5 class="card-title">Search term: {{search_terms[i]}}</h5>
     </div>
     <div class="card-body">
-    {% for j in range(k, url|length) %}
-    {% if url[j] != 'break' %}
+    {% for j in range(k, url|length) if url[j] != 'break'%}
     <li><a href={{url[j]}}>{{title[j]}}</a></li>
     <ul>publish date: {{publish_date[j]}}</ul>
-
-    {% else %}
     {% set k = j+1%}
-    {% endif %}
     {% endfor %}
     </div>
      <div class="card-footer">
-         <a href="/delete/{{search_term_id[i]}}" class="btn btn-danger">Delete</a>
+         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">Delete</button>
      </div>
 </div>
 {% endfor %}
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+    <!--
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete Confirmation</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    -->
+      <div class="modal-body">
+        Do you want to delete this?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+         <a href="/delete/{{search_term_id[i]}}" class="btn btn-danger">Yes</a>
+      </div>
+    </div>
+  </div>
+</div>
+
     <form method="post">
     <div class="form-group">
     </div>
