--- a/flask/flaskr/templates/auth/register.html
+++ b/flask/flaskr/templates/auth/register.html
@@ -5,11 +5,17 @@
 {% endblock %}
 
 {% block content %}
-  <form method="post">
-    <label for="email">Email</label>
-    <input name="email" id="email" required>
-    <label for="pwd">Password</label>
-    <input type="password" name="pwd" id="pwd" required>
-    <input type="submit" value="Register">
-  </form>
+<form method="post">
+    <div class="form-group">
+        <label for="email">Email</label>
+        <input class="form-control" name="email" id="email" type="email" required>
+    </div>
+    <div class="form-group">
+        <label for="pwd">Password</label>
+        <input class="form-control" name="pwd" id="pwd" type="password" required>
+    </div>
+    <div class="form-group">
+        <button class="btn btn-info" type="submit">Register</button>
+    </div>
+</form>
 {% endblock %}
