--- a/flask/flaskr/templates/popup.html
+++ b/flask/flaskr/templates/popup.html
@@ -47,7 +47,7 @@
             <!--Footer-->
             <div class="modal-footer">
               <div class="options text-center text-md-right mt-1">
-                <p>Not a member? <a href="#" class="blue-text">Sign Up</a></p>
+                  <p>Not a member? <a href={{url_for("controller.register")}} class="blue-text">Sign Up</a></p>
                 <!--
                 <p>Forgot <a href="#" class="blue-text">Password?</a></p>
                 -->
@@ -92,7 +92,7 @@
             <!--Footer-->
             <div class="modal-footer">
               <div class="options text-right">
-                <p class="pt-1">Already have an account? <a href="#" class="blue-text">Log In</a></p>
+                  <p class="pt-1">Already have an account? <a href={{url_for("controller.login")}} class="blue-text">Log In</a></p>
               </div>
               <button type="button" class="btn btn-outline-info waves-effect ml-auto" data-dismiss="modal">Close</button>
             </div>
