--- a/flask/flaskr/templates/index.html
+++ b/flask/flaskr/templates/index.html
@@ -22,8 +22,7 @@
     };
 </script>
 -->
-    {% if g.user %}
-    {% else %}
+    {% if not g.user %}
     <script>
         $("#login_register").click();
     </script>
@@ -42,7 +41,9 @@
     </script>
     </div>
         <button class="btn btn-primary" type="submit" id="search" name="search">Search</button>
-        <a href={{url_for("controller.subscription")}} class="btn btn-success">Add To Your Subscription</a>
+        {% if g.user and session["context"] %}
+        <a href={{url_for("controller.add")}} class="btn btn-success">Add To Your Subscription</a>
+        {% endif %}
     </form>
     <label for="results">{{result}}</label>
     {% for i in range(url|length)%}
