--- a/flask/flaskr/templates/base.html
+++ b/flask/flaskr/templates/base.html
@@ -32,9 +32,16 @@
   <header>
     {% block header %}{% endblock %}
   </header>
-  {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+  <script>
+      var messages = {{ messages | safe }};
+      for (var i=0; i<messages.length; i++) {
+        alert(messages[i]);
+      }
+    </script>
+  {% endif %}
+{% endwith %}
   {% block content %}{% endblock %}
 </section>
 
