beautify subscription page

--- a/flask/flaskr/templates/subscription.html
+++ b/flask/flaskr/templates/subscription.html
@@ -8,7 +8,7 @@
     });
 </script>
 {% for i in range(search_terms|length) %}
-<div class="card bg-light">
+<div class="card border-light mb-3">
     <div class="card-header">
         <h5 class="card-title">Search term: {{search_terms[i]}}</h5>
     </div>
