--- a/flask/flaskr/templates/index.html
+++ b/flask/flaskr/templates/index.html
@@ -3,25 +3,6 @@
 {% block body %}
     <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
     <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
-    <!--
-<script>
-    window.onload = function() {
-        var button_index = document.getElementById('index');
-        var button_search = document.getElementById('search');
-        var page = document.getElementById('page');
-        if (window.location.href.slice(-6) != "search"){
-            button_search.style.display = "none";
-            button_index.style.display = "block";
-            page.style.display = "block";
-        }
-        else {
-            button_search.style.display = "block";
-            button_index.style.display = "none";
-            page.style.display = "none";
-        }
-    };
-</script>
--->
     {% if not g.user %}
     <script>
         $("#login_register").click();
@@ -30,6 +11,7 @@
 
     <form method="post">
     <div class="form-group">
+        <img src="{{url_for('static', filename='example.png')}}" class="rounded img-fluid">
         <label for="exampleFormControlTextarea1">Paste your search details here</label>
         <textarea class="form-control" id="search_terms" name="search_terms" rows="3">{{search_term}}</textarea>
         <label for="datepicker">Papers published after:</label>
